--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <script src="./js/classes/Particle.js"></script>
   <script src="./js/classes/Projectile.js"></script>
   <script src="./js/eventListeners.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="./js/frontend.js"></script>
 </body>
 
 </html>
